use deviceId instead of ipAddress for devices
