# backend/spring-boot/src/main/java/org/bugzkit/api/auth/jwt/redis/repository/RefreshTokenStoreRepository.java
@@ -6,7 +6,7 @@ import org.bugzkit.api.auth.jwt.redis.model.RefreshTokenStore;
 import org.springframework.data.repository.CrudRepository;
 
 public interface RefreshTokenStoreRepository extends CrudRepository<RefreshTokenStore, String> {
-  Optional<RefreshTokenStore> findByUserIdAndIpAddress(Long userId, String ipAddress);
+  Optional<RefreshTokenStore> findByUserIdAndDeviceId(Long userId, String deviceId);
 
   List<RefreshTokenStore> findAllByUserId(Long userId);
 }
