# backend/spring-boot/src/main/java/org/bugzkit/api/auth/service/impl/AuthServiceImpl.java
@@ -2,12 +2,12 @@ package org.bugzkit.api.auth.service.impl;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import org.bugzkit.api.auth.AuthTokens;
 import org.bugzkit.api.auth.jwt.service.AccessTokenService;
 import org.bugzkit.api.auth.jwt.service.RefreshTokenService;
 import org.bugzkit.api.auth.jwt.service.ResetPasswordTokenService;
 import org.bugzkit.api.auth.jwt.service.VerificationTokenService;
 import org.bugzkit.api.auth.jwt.util.JwtUtil;
-import org.bugzkit.api.auth.payload.dto.AuthTokensDTO;
 import org.bugzkit.api.auth.payload.request.AuthTokensRequest;
 import org.bugzkit.api.auth.payload.request.ForgotPasswordRequest;
 import org.bugzkit.api.auth.payload.request.RegisterUserRequest;
@@ -15,6 +15,7 @@ import org.bugzkit.api.auth.payload.request.ResetPasswordRequest;
 import org.bugzkit.api.auth.payload.request.VerificationEmailRequest;
 import org.bugzkit.api.auth.payload.request.VerifyEmailRequest;
 import org.bugzkit.api.auth.service.AuthService;
+import org.bugzkit.api.auth.service.DeviceService;
 import org.bugzkit.api.auth.util.AuthUtil;
 import org.bugzkit.api.shared.error.exception.BadRequestException;
 import org.bugzkit.api.shared.error.exception.ConflictException;
@@ -42,6 +43,7 @@ public class AuthServiceImpl implements AuthService {
   private final RefreshTokenService refreshTokenService;
   private final VerificationTokenService verificationTokenService;
   private final ResetPasswordTokenService resetPasswordTokenService;
+  private final DeviceService deviceService;
 
   public AuthServiceImpl(
       UserRepository userRepository,
@@ -51,7 +53,8 @@ public class AuthServiceImpl implements AuthService {
       AccessTokenService accessTokenService,
       RefreshTokenService refreshTokenService,
       VerificationTokenService verificationTokenService,
-      ResetPasswordTokenService resetPasswordTokenService) {
+      ResetPasswordTokenService resetPasswordTokenService,
+      DeviceService deviceService) {
     this.userRepository = userRepository;
     this.roleRepository = roleRepository;
     this.bCryptPasswordEncoder = bCryptPasswordEncoder;
@@ -60,6 +63,7 @@ public class AuthServiceImpl implements AuthService {
     this.refreshTokenService = refreshTokenService;
     this.verificationTokenService = verificationTokenService;
     this.resetPasswordTokenService = resetPasswordTokenService;
+    this.deviceService = deviceService;
   }
 
   @Override
@@ -76,7 +80,8 @@ public class AuthServiceImpl implements AuthService {
   }
 
   @Override
-  public AuthTokensDTO authenticate(AuthTokensRequest authTokensRequest, String ipAddress) {
+  public AuthTokens authenticate(
+      AuthTokensRequest authTokensRequest, String deviceId, String userAgent) {
     final var auth =
         new UsernamePasswordAuthenticationToken(
             authTokensRequest.usernameOrEmail(), authTokensRequest.password(), new ArrayList<>());
@@ -90,9 +95,10 @@ public class AuthServiceImpl implements AuthService {
     final var accessToken = accessTokenService.create(user.getId(), roleDTOs);
     final var refreshToken =
         refreshTokenService
-            .findByUserIdAndIpAddress(user.getId(), ipAddress)
-            .orElse(refreshTokenService.create(user.getId(), roleDTOs, ipAddress));
-    return new AuthTokensDTO(accessToken, refreshToken);
+            .findByUserIdAndDeviceId(user.getId(), deviceId)
+            .orElse(refreshTokenService.create(user.getId(), roleDTOs, deviceId));
+    deviceService.createOrUpdate(user.getId(), deviceId, userAgent);
+    return new AuthTokens(accessToken, refreshToken, deviceId);
   }
 
   private User createUser(RegisterUserRequest registerUserRequest) {
@@ -109,30 +115,35 @@ public class AuthServiceImpl implements AuthService {
   }
 
   @Override
-  public void deleteTokens(String accessToken, String ipAddress) {
+  @Transactional
+  public void deleteTokens(String accessToken, String deviceId) {
     if (!AuthUtil.isSignedIn()) return;
     final var id = AuthUtil.findSignedInUser().getId();
-    refreshTokenService.deleteByUserIdAndIpAddress(id, ipAddress);
+    refreshTokenService.deleteByUserIdAndDeviceId(id, deviceId);
     accessTokenService.invalidate(accessToken);
+    deviceService.deleteByUserIdAndDeviceId(id, deviceId);
   }
 
   @Override
+  @Transactional
   public void deleteTokensOnAllDevices() {
     if (!AuthUtil.isSignedIn()) return;
     final var id = AuthUtil.findSignedInUser().getId();
     refreshTokenService.deleteAllByUserId(id);
     accessTokenService.invalidateAllByUserId(id);
+    deviceService.deleteAllByUserId(id);
   }
 
   @Override
-  public AuthTokensDTO refreshTokens(String refreshToken, String ipAddress) {
+  public AuthTokens refreshTokens(String refreshToken, String deviceId, String userAgent) {
     refreshTokenService.check(refreshToken);
     final var userId = JwtUtil.getUserId(refreshToken);
     final var roleDTOs = JwtUtil.getRoleDTOs(refreshToken);
     refreshTokenService.delete(refreshToken);
     final var newAccessToken = accessTokenService.create(userId, roleDTOs);
-    final var newRefreshToken = refreshTokenService.create(userId, roleDTOs, ipAddress);
-    return new AuthTokensDTO(newAccessToken, newRefreshToken);
+    final var newRefreshToken = refreshTokenService.create(userId, roleDTOs, deviceId);
+    deviceService.createOrUpdate(userId, deviceId, userAgent);
+    return new AuthTokens(newAccessToken, newRefreshToken, deviceId);
   }
 
   @Override
